<resources>
    <!-- Name of the app -->
    <string name="app_name">Inventory App</string>

    <!-- Text for the add product button -->
    <string name="add_product">Add product</string>

    <!-- Text of the sales button -->
    <string name="sales_button_text">-</string>

    <!-- Currency symbol -->
    <string name="currency_symbol">€</string>

    <!-- Floating action button text -->
    <string name="fab_text">Add</string>

    <!-- Text for the Details view -->
    <string name="details_shipment_button_text">+</string>
    <string name="details_sales_button_text">-</string>
    <string name="details_supplier_email_label">Supplier email:</string>
    <string name="details_order_button_text">Order now</string>
    <string name="details_delete_label">Delete the complete product</string>
    <string name="details_delete_button_text">Delete now</string>

    <!-- Empty text view string -->
    <string name="empty_text_view_string">No data found.</string>







    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Pet</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_pet">Edit Pet</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>


    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="add_product_page_insert_successful">Product saved</string>

    <!-- Toast message in add product page when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="add_product_page_insert_failed">Error with saving product</string>

    <!-- Warning message when fields in the add product page are left empty which require a value -->
    <string name="fields_are_still_empty">One of name, price or supplier email needs a value. Please supply it.</string>


    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_successful">Pet updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_failed">Error with updating pet</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>





    <!-- Label for product name on the add product page [CHAR LIMIT=30] -->
    <string name="product_name">Product name</string>

    <!-- Label for product description on the add product page [CHAR LIMIT=30] -->
    <string name="product_description">Description</string>

    <!-- Label for reorder rate on the add product page [CHAR LIMIT=30] -->
    <string name="category_reorder_rate">Reorder rate</string>

    <!-- Label for price on the add product page  [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for quantity on the add product page  [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier email on the add product page  [CHAR LIMIT=30] -->
    <string name="category_supplier_email">Supplier Email</string>

    <!-- Text hint for name field on the add product page [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for description field on the add product page [CHAR LIMIT=30] -->
    <string name="hint_product_description">Description</string>

    <!-- Text hint for price field on the add product page [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Units for price of the product (Euro) [CHAR LIMIT=5] -->
    <string name="unit_product_price">€</string>

    <!-- Text hint for quantity field on the add product page [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for supplier email field on the add product page [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_email">Email</string>

    <!-- Label for dropdown menu option if the product's reorder rate is daily [CHAR LIMIT=20] -->
    <string name="reorder_rate_daily">Daily</string>

    <!-- Label for dropdown menu option if the product's reorder rate is weekly [CHAR LIMIT=20] -->
    <string name="reorder_rate_weekly">Weekly</string>

    <!-- Label for dropdown menu option if the product's reorder rate is monthly [CHAR LIMIT=20] -->
    <string name="reorder_rate_monthly">Monthly</string>

    <!-- Label for dropdown menu option if the product's reorder rate is yearly [CHAR LIMIT=20] -->
    <string name="reorder_rate_yearly">Yearly</string>

    <!-- Text for the save product button on the add product page [CHAR LIMIT=20] -->
    <string name="save_product_button_text">Save now</string>

</resources>
