<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDetailsBackgroundLight"
    android:orientation="vertical"
    android:drawSelectorOnTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_delete_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/details_delete_label"
            android:textColor="@color/colorDetailsTextSecondary" />

        <Button
            android:id="@+id/details_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/details_delete_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/details_product_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Bananas"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorDetailsTextPrimary" />

    <TextView
        android:id="@+id/details_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDetailsTextSecondary"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="Bananas from Honduras with best biological quality"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_supplier_email_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_supplier_email_label"
                android:textColor="@color/colorDetailsTextSecondary" />

            <TextView
                android:id="@+id/details_supplier_email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDetailsTextSecondary"
                android:textStyle="italic"
                android:text="best.delivery@rewe.com"/>
        </LinearLayout>

        <Button
            android:id="@+id/details_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/details_order_button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_sales_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/details_sales_button_text"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/details_quantity_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="100"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorDetailsTextPrimary" />

        <Button
            android:id="@+id/details_shipment_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/details_shipment_button_text"
            android:textAppearance="?android:textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>